src/main/webapp/style/style.css
/* ... */
.colHead {
	width:138px;
	height:auto;
	cursor:pointer;
  word-wrap: break-word;
}


.tdFixed {  
	background-color: #f1f1f1;
	/*min-width:140px;
	width: 140px;*/
}

.tdScroll {  
	background-color: #fafafa;
	border: 1px solid #eaeaea;
	padding: 0.3em;
	/*min-width:140px;
	width: 140px;*/
}


/* data tables */

table.data-table td,
table.data-table th{
	text-align: left;
}

/* scrollable data tables

taken from a code exmaple at http://www.456bereastreet.com/archive/201309/responsive_scrollable_tables/

with thanks 

 */




.scrollable {
    overflow-x:auto;
    overflow-y:auto;
}

.scrollable.has-scroll {
    position:relative;
    overflow:hidden; /* Clips the shadow created with the pseudo-element in the next rule. Not necessary for the actual scrolling. */
}
.scrollable.has-scroll:after {
    position:absolute;
    top:0;
    left:100%;
    width:50px;
    height:100%;
    border-radius:10px 0 0 10px / 50% 0 0 50%;
    box-shadow:-5px 0 10px rgba(0, 0, 0, 0.25);
    content:'';
}
/* This is the element whose content will be scrolled if necessary */
.scrollable.has-scroll > div {
    overflow-x:auto;
     overflow-y:auto;
     height: 400px;
     margin-bottom: 1em;
}

/* make sure the element is obviously scrollable (i.e. scrollbar tracks are visible) */


.scrollable > div::-webkit-scrollbar {
    height:12px;
}
.scrollable > div::-webkit-scrollbar-track {
    box-shadow:0 0 2px rgba(0,0,0,0.15) inset;
    background:#f0f0f0;
}
.scrollable > div::-webkit-scrollbar-thumb {
    border-radius:6px;
    background:#ccc;
}





/* two carranfement for info  */



.two-up {
  
  float: left;
  width: 45%;
  margin-bottom: 2em;
  margin-right: 2%;
}




.two-up.message {
  
clear: none;
  
}


.two-up textarea{
  
width: 90%;
border: 1px solid #999;
}




.three-up {
  
  float: left;
  width: 30%;
  margin: 0 0.5em 2em 0;
  min-height: 25em;
  
}


.breadcrumbs-wrapper a,
span.breadcrumbs,
a.breadcrumbs {   


    display: inline-block;
    padding: 5px 20px 5px 5px;
    text-decoration: none;
    margin: 0px 0px 0px 0px;
}


a.breadcrumbs,
.breadcrumbs-wrapper a {
  
    background: #f5f7fa url("images/icons/breadcrumb-arrow.png") no-repeat right 5px;
    
    }
    
    
span.breadcrumbs,
span.youarehere {
  
  font-weight: bold;
}


.clear {
  
  clear: both;
  
}

.select2 {
    width: 10em;
    font-size: .99em;
}

select.select2 {
    height: 1.5em;
}

.ajax-loader {
    display:none;
}

.main .sqllabel {
    clear: both;
    float: none;
    font-family: monospace;
    text-align: left;
}

.sqlinput {
    border: 1px dashed rgba(0, 0, 0, 0.2);
    margin-left: 4em;
    width: 40%;
}

.sqlhelp {
    float: right;
    margin: 0 0 0.1em;
    width: 50%;
    font-size: .8em;
}

#limitinput, #offsetinput, #groupbyinput, #orderbyinput {
    height: 1.5em;
}


.thumb {
    width: 24px;
    height: 24px;
    float: none;
    position: relative;
    top: 7px;
}

form .progress {
    line-height: 15px;
}

.progress {
    display: inline-block;
    width: 100px;
    border: 3px groove #CCC;
}

.progress div {
    font-size: smaller;
    background: orange;
    width: 0;
}

/*
  Shows the API URL in forms
*/
#apilink {
    width:100%;
}

